# pacman

./: .gitignore  Makefile  README.md  config.json  config.txt  main.py  pac-man.py  pyproject.toml  scoreboard.json
project_menagement/: ARCHITECTURAL_CHOICES.md  RISK_ANALYSIS.md  TEAM_ORGANIZATION.md  TEST_PLAN.md  TIMELINE.md
src/: __main__.py  constants.py  controller.py  logic.py  renderer.py  state.py
src/backend/: collision.py  game_actions.py  game_board_generator.py  game_initializer.py  game_motion.py  game_physics.py  game_state_mamager.py  game_state_manager.py  ghost_life_cycle.py  ghost_movement.py  ghost_movement_logic.py  ghost_novement.py  git_merge_note.txt  logic.py  maze_renderer.py  parse_config_files.py  score_board_handler.py
src/frontend/: controller.py  event.py  renderer.py  scene.py
src/frontend/scenes/: final_scene.py  game_scene.py  gamescene.py  highscores_scene.py  instructions_scene.py  main_menu_scene.py  models.py  pause_scene.py
